--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -56,7 +56,7 @@
   <div class="col-md-4 text-center column justify-content-center">
 
     <div class="mt-3 mb-2">
-      <h4>Newest Posts</h4>
+      <h4>Latest Posts</h4>
     </div>
 
     <div class="mb-3">
