Only moderators can create new Rooms

--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -19,9 +19,9 @@
 
   </div>
   <div class="mb-3 col-md-12  d-flex column justify-content-center">
-
+      {{#ifCond user.isMod true}}
       <p class="mt-2">Or create a new one <a href="/rooms/new"><b><u>here!</u></b></a></p>
-
+      {{/ifCond}}
   </div>
 </div>
 
