--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -9,7 +9,8 @@
 
     <div class="form-group">
       <label for="post-body">Body:</label>
-      <textarea type="textarea" name="body" maxlength="800" class="form-control" id="post-body exampleFormControlTextarea3" rows="5"></textarea>
+      <textarea type="textarea" name="body" maxlength="800" class="form-control"
+        id="post-body exampleFormControlTextarea3" rows="5"></textarea>
     </div>
 
     <div class="form-group">
