--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,8 @@
 
   <div class="form-group mt-4">
     <label for="user-username">Username:</label>
-    <input type="text" value="{{user.username}}" autofocus="autofocus" name="username" class="form-control" id="user-username" placeholder="Username">
+    <input type="text" value="{{user.username}}" autofocus="autofocus" name="username" class="form-control"
+      id="user-username" placeholder="Username">
   </div>
 
   <div class="form-group">
@@ -14,5 +15,4 @@
   <div class="text-right">
     <button type="submit" class="btn btn-primary">Log in!</button>
   </div>
-  <p class="text-right mt-2"><a href="/login">Don't have an account?</a></p
-</form>
+  <p class="text-right mt-2"><a href="/login">Don't have an account?</a></p>
