--- a/views/posts/edit.hbs
+++ b/views/posts/edit.hbs
@@ -4,12 +4,14 @@
 
     <div class="form-group">
       <label for="post-subject">Subject:</label>
-      <input type="text" autofocus="autofocus" name="subject" value="{{post.subject}}" class="form-control" id="post-subject">
+      <input type="text" autofocus="autofocus" name="subject" value="{{post.subject}}" class="form-control"
+        id="post-subject">
     </div>
 
     <div class="form-group">
       <label for="post-body">Body:</label>
-      <textarea type="textarea" name="body" class="form-control" id="post-body exampleFormControlTextarea3" rows="5">{{post.body}}</textarea>
+      <textarea type="textarea" name="body" class="form-control" id="post-body exampleFormControlTextarea3"
+        rows="5">{{post.body}}</textarea>
     </div>
 
     <div class="form-group">
